# anchor

./: .cspell-anchor-dictionary.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bump-version.sh  cspell.config.yaml  setup-tests.sh
.github/actions/setup-solana/: action.yaml
.github/actions/setup-surfpool/: action.yaml
.github/actions/setup-ts/: action.yaml
.github/workflows/: global-lint.yaml  no-caching-tests.yaml  release.yaml  reusable-tests.yaml  tests.yaml
avm/: Cargo.toml
avm/src/: lib.rs  main.rs
bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  STACK_MEMORY.md
cli/: Cargo.toml
cli/npm-package/: package.json
cli/src/: account.rs  checks.rs  config.rs  keygen.rs  lib.rs  program.rs  rust_template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh  setup.tx  txtx.yml
client/example/src/: blocking.rs  main.rs  nonblocking.rs
client/src/: blocking.rs  lib.rs  nonblocking.rs
docker/: Makefile
docs/: package.json  pnpm-lock.yaml
docs/content/docs/: installation.mdx
examples/tutorial/basic-0/: client.js  package.json
examples/tutorial/basic-1/: package.json
examples/tutorial/basic-2/: package.json
examples/tutorial/basic-3/: package.json
idl/: Cargo.toml
idl/src/: build.rs  convert.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lazy.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: constants.rs  cpi.rs  errors.rs  internal.rs  mod.rs  parsers.rs  utils.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lib.rs
lang/derive/space/: Cargo.toml
lang/src/: account_meta.rs  bpf_writer.rs  common.rs  context.rs  error.rs  idl.rs  lazy.rs  lib.rs  system_program.rs  vec.rs
lang/src/accounts/: account.rs  account_loader.rs  interface.rs  interface_account.rs  migration.rs  mod.rs  program.rs  sysvar.rs
lang/src/signature_verification/: ed25519.rs  mod.rs  secp256k1.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  bumps.rs  constraints.rs  try_accounts.rs
lang/syn/src/codegen/program/: common.rs  cpi.rs  dispatch.rs  handlers.rs  idl.rs  instruction.rs  mod.rs
lang/syn/src/idl/: accounts.rs  defined.rs  error.rs
lang/syn/src/parser/: context.rs  mod.rs
lang/syn/src/parser/accounts/: constraints.rs  mod.rs
lang/syn/src/parser/program/: instructions.rs
lang/tests/: account_reload.rs  generics_test.rs  seeds_compile.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  lib.rs  memo.rs  metadata.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
spl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
tests/: package.json
tests/anchor-cli-account/: package.json
tests/anchor-cli-idl/: package.json
tests/auction-house/: package.json
tests/auction-house/programs/auction-house/: Cargo.toml
tests/auction-house/programs/auction-house/src/: lib.rs  utils.rs
tests/bench/: bench.json  package.json
tests/cashiers-check/: package.json
tests/cfo/: package.json
tests/chat/: package.json
tests/composite/: package.json
tests/cpi-returns/: package.json
tests/custom-coder/: package.json
tests/custom-discriminator/: package.json
tests/custom-program/: Anchor.toml  package.json
tests/custom-program/programs/custom-program/: Cargo.toml
tests/custom-program/programs/custom-program/src/: lib.rs
tests/declare-id/: package.json
tests/declare-program/: package.json
tests/declare-program/programs/declare-program/: Cargo.toml
tests/declare-program/programs/declare-program/src/: lib.rs
tests/declare-program/programs/declare-program/tests/: client.rs  parsers.rs
tests/duplicate-mutable-accounts/: Anchor.toml  Cargo.toml  package.json
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/: Cargo.toml
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/src/: lib.rs
tests/errors/: Anchor.toml  package.json
tests/escrow/: package.json
tests/events/: package.json
tests/floats/: package.json
tests/idl/: package.json
tests/ido-pool/: Anchor.toml  package.json
tests/interface-account/: Anchor.toml  package.json  tsconfig.json
tests/lazy-account/: package.json
tests/lockup/: package.json
tests/misc/: Anchor.toml  miscNonRentExempt.ts  package.json
tests/multiple-suites/: package.json
tests/multisig/: package.json
tests/optional/: package.json
tests/pda-derivation/: package.json
tests/pyth/: package.json
tests/realloc/: package.json
tests/relations-derivation/: package.json
tests/safety-checks/: Anchor.toml  test.sh
tests/signature-verification/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
tests/signature-verification/programs/signature-verification-test/: Cargo.toml
tests/signature-verification/programs/signature-verification-test/src/: lib.rs
tests/swap/: package.json
tests/system-accounts/: package.json
tests/sysvars/: package.json
tests/test-instruction-validation/: test.sh
tests/test-instruction-validation/fail-type/programs/test-instruction-validation/: Cargo.toml
tests/test-instruction-validation/fail-type/programs/test-instruction-validation/src/: lib.rs
tests/tictactoe/: package.json
tests/typescript/: package.json
tests/validator-clone/: package.json
tests/zero-copy/: package.json
ts/: package.json
ts/tests/: package.json
(+166 files in other folders)
