[package]
name = "anchor-spl"
version = "0.32.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["associated_token", "mint", "token", "token_2022", "token_2022_extensions"]
anchor-debug = ["anchor-lang/anchor-debug"]
associated_token = ["spl-associated-token-account-interface"]
devnet = []
governance = []
idl-build = ["anchor-lang/idl-build"]
memo = ["spl-memo-interface"]
metadata = ["mpl-token-metadata", "dep:solana-sysvar", "dep:base64ct"]
mint = []
stake = ["dep:borsh", "dep:solana-stake-interface"]
token = ["spl-token-interface"]
token_2022 = ["spl-token-2022-interface"]
token_2022_extensions = [
    "spl-token-2022-interface",
    "spl-token-group-interface",
    "spl-token-metadata-interface",
    "spl-pod",
]

[dependencies]
anchor-lang = { path = "../lang", version = "0.32.1", features = ["derive"] }
# FIXME(edition2024): Not used directly, but upstream crates resolve to this version,
# which uses Edition 2024
base64ct = { version = "<1.8.0", optional = true }
borsh = { version = "1.5.7", optional = true }
mpl-token-metadata = { version = "=5.1.2-alpha.1", optional = true }
solana-stake-interface = { workspace = true, features = ["borsh"], optional = true }
solana-sysvar = { version = "3", optional = true }
spl-associated-token-account-interface = { version = "2", optional = true }
spl-memo-interface = { version = "2", optional = true }
spl-pod = { version = "0.7", optional = true }
spl-token-interface = { version = "2", optional = true }
spl-token-2022-interface = { version = "2", optional = true }
spl-token-group-interface = { version = "0.7", optional = true }
spl-token-metadata-interface = { version = "0.8", optional = true }
