[package]
name = "auction-house"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../lang" }
anchor-spl = { path = "../../../../spl", features = ["metadata"] }
thiserror = "1.0"
arrayref = "0.3.6"
# FIXME: We transitively depend on base64ct, which switched to edition 2024 in 1.8.0
# This pin can be removed when our toolchain is bumped to a compatbile compiler
# base64ct = "=1.7.3"
